RESOLVED FIXED51494
Restoring lost WebGL context causes a crash
https://bugs.webkit.org/show_bug.cgi?id=51494
Summary Restoring lost WebGL context causes a crash
Adrienne Walker
Reported 2010-12-22 14:14:46 PST
It appears as though the context lost flag is still true when the context is recreated and the fallback 1x1 black textures are created. As createTexture() returns null in the case of a lost context, these textures fail to be created and there's a null pointer deref.
Attachments
Patch (1.64 KB, patch)
2010-12-22 14:17 PST, Adrienne Walker
kbr: review+
Adrienne Walker
Comment 1 2010-12-22 14:17:15 PST
Kenneth Russell
Comment 2 2010-12-22 14:39:48 PST
Comment on attachment 77259 [details] Patch Looks good.
Adrienne Walker
Comment 3 2010-12-22 16:27:10 PST
Note You need to log in before you can comment on or make changes to this bug.