2010-12-22  Adrienne Walker  <enne@google.com>

Reviewed by Kenneth Russell.

        Fix null pointer deref when restoring a lost WebGL context.
        https://bugs.webkit.org/show_bug.cgi?id=51494

        No new tests, as context restored events are not currently testable.

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::initializeNewContext):
        (WebCore::WebGLRenderingContext::restoreContext):

Canonical link: https://commits.webkit.org/64857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74516 268f45cc-cd09-0410-ab3c-d52691b4dbfc